<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal"
    tools:context=".ReadtimeActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/realtime_1_value"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/edt_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:hint="@string/nh_p_data"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_push_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/push_datas"/>
        <Button
            android:id="@+id/btn_delete_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_value"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_result"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/realtime_1_object"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/edt_input_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:textColor="@color/black"
        android:hint="@string/nh_p_id"/>
    <EditText
        android:id="@+id/edt_input_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:hint="@string/nh_p_t_n"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_push_object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/push_datas"/>

        <Button
            android:id="@+id/btn_delete_object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/delete_value" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_result_object"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>